--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Home | Mawuena Foudations</title>
 </head>
 <body>
@@ -11,6 +12,22 @@
     <h1 class="logo">
       <span>Mawuena</span>Foundation
     </h1>
+    <ul>
+      <li><a href="#home">home</a></li>
+      <li><a href="#what">what</a></li>
+      <li><a href="#who">who</a></li>
+      <li><a href="#contact">contact</a></li>
+    </ul>
   </nav>
+  <!--code for header tag-->
+  <header id="showcase">
+   <div class="show-content">
+     <h1 class="l-leading">Helping people help themselves</h1>
+   </p class="lead">
+   Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus incidunt amet sunt obcaecati at laudantium ea facere mollitia quasi nostrum, temporibus delectus numquam velit quaerat consequatur rem distinctio vero sint!
+  </p>
+  <a href="#what" class="btn">Read More</a>
+   </div> 
+  </header>
 </body>
 </html>
