--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Home | Mawuena Foudations</title>
+  <title>Home | Mawuena Foundation</title>
 </head>
+
 <body>
   <nav id="navbar">
     <h1 class="logo">
@@ -21,13 +24,93 @@
   </nav>
   <!--code for header tag-->
   <header id="showcase">
-   <div class="show-content">
-     <h1 class="l-leading">Helping people help themselves</h1>
-   </p class="lead">
-   Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus incidunt amet sunt obcaecati at laudantium ea facere mollitia quasi nostrum, temporibus delectus numquam velit quaerat consequatur rem distinctio vero sint!
-  </p>
-  <a href="#what" class="btn">Read More</a>
-   </div> 
+    <div class="show-content">
+      <h1 class="l-leading">Helping people help themselves</h1>
+      </p class="lead">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus incidunt amet sunt obcaecati at laudantium
+      ea facere mollitia quasi nostrum, temporibus delectus numquam velit quaerat consequatur rem distinctio vero sint!
+      </p>
+      <a href="#what" class="btn">Read More</a>
+    </div>
   </header>
+
+  <section id="what" class="big-light py-1">
+    <div class="container">
+      <h2>
+        <span>what</span> we do
+      </h2>
+      <div class="items">
+        <div class="item">
+          <i class="fa-solid fa-graduation-cap fa-2x"></i>
+          <div>
+            <h3>Education</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit ipsum aliquid error officia sunt
+              veniam nesciunt! Eveniet, incidunt nemo?
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          <i class="fa-solid fa-kit-medical fa-2x"></i>
+          <div>
+            <h3>Health</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit ipsum aliquid error officia sunt
+              veniam nesciunt! Eveniet, incidunt nemo?
+            </p>
+          </div>
+        </div>
+
+        <div class="item">
+          </i><i class="fa-solid fa-hands-holding-child fa-2x"></i>
+          <div>
+            <h3>Charity</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit ipsum aliquid error officia sunt
+              veniam nesciunt! Eveniet, incidunt nemo?
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+  </section>
+  <!--who we are section-->
+  <section id="who">
+    <div class="who-img"></div>
+    <div class="who-text bg-dark p-2">
+      <h2 class="m-heading"><span class="text-primary">who </span> we Are</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolorum quisquam commodi explicabo
+        quibusdam dolores reprehenderit, quae enim, rerum voluptatem natus dolorem assumenda. Nobis nihil soluta vitae
+        sunt eveniet illum.
+      </p>
+      <h3>Our Team</h3>
+      <ul class="list">
+        <li>Paschaline Deladem: CEO</li>
+        <li>Alex Asor: Director</li>
+        <li>Perfect Semenyo: Project Manager</li>
+        <li>Semenyo Alai: Accountant</li>
+        <li>Spider Hussle: Secretary</li>
+
+      </ul>
+    </div>
+  </section>
+  <!--clients-->
+  <section id="clients" class="py-1">
+    <div class="container">
+      <h2><span>Our</span>clients</h2>
+      <div class="items py-1">
+        <div><img src="img/logo/img1.png" alt=""></div>
+        <div><img src="img/logo/img2.png" alt=""></div>
+        <div><img src="img/logo/img3.png" alt=""></div>
+        <div><img src="img/logo/img4.png" alt=""></div>
+        <div><img src="img/logo/img5.png" alt=""></div>
+        <div><img src= "img/logo/img6.png" alt=""></div>
+        <div><img src="img/logo/img7.png" alt=""></div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
