--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav id="navbar">
     <h1 class="logo">
-      <span>Mawuena</span>Foundation
+      <span class="text-primary"> <i class="fa-solid fa-hand-holding-medical"></i> Mawuena</span>Foundation
     </h1>
     <ul>
       <li><a href="#home">home</a></li>
@@ -36,9 +36,7 @@
 
   <section id="what" class="big-light py-1">
     <div class="container">
-      <h2>
-        <span>what</span> we do
-      </h2>
+      <h2 class="m-heading text-center"><span class="text-primary">what</span> we do</h2>
       <div class="items">
         <div class="item">
           <i class="fa-solid fa-graduation-cap fa-2x"></i>
@@ -100,7 +98,7 @@
   <!--clients-->
   <section id="clients" class="py-1">
     <div class="container">
-      <h2><span>Our</span>clients</h2>
+      <h2 class="m-heading text-center"><span class="text-primary">Our</span>clients</h2>
       <div class="items py-1">
         <div><img src="img/logo/img1.png" alt=""></div>
         <div><img src="img/logo/img2.png" alt=""></div>
@@ -111,6 +109,39 @@
         <div><img src="img/logo/img7.png" alt=""></div>
       </div>
     </div>
+  </section>
+
+  <!--contact section-->
+  <section id="contact">
+<div class="contact-form bg-primary p-2">
+<h2 class="m-heading">Contact Us</h2>
+<p> Please use the form below to contact us</p>
+<form action="">
+
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text"class="form-control" id="name" placeholder="Enter your name">
+  </div>
+
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="email"class="form-control" id="email" placeholder="Enter your email">
+  </div>
+
+  <div class="form-group">
+    <label for="phone">Phone number</label>
+    <input type="phone"class="form-control" id="phone" placeholder="Enter your phone number">
+  </div>
+
+  <div class="form-group">
+    <label for="message">Message</label>
+    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+  </div>
+  
+  <input type="submit" value="Send" class="btn btn-dark">
+
+</form>
+</div>
   </section>
 </body>
 </html>
