--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <link rel="stylesheet" href="./css/style.css">
+
+  <link rel="stylesheet" href="./css/style.css"/>
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css"/>
+  <link rel="stylesheet" media="screen and (min-width: 1100px)" href="./css/widescreen.css"/>
+
+
   <title>Home | Mawuena Foundation</title>
 </head>
 
@@ -114,8 +119,8 @@
   <!--contact section-->
   <section id="contact">
 <div class="contact-form bg-primary p-2">
-<h2 class="m-heading">Contact Us</h2>
-<p> Please use the form below to contact us</p>
+<h2 class="m-heading p-center">Contact Us</h2>
+<p class="p-center"> Please use the form below to contact us</p>
 <form action="">
 
   <div class="form-group">
