class Wed. June 1

--- a/index.html
+++ b/index.html
@@ -148,5 +148,10 @@
 </form>
 </div>
   </section>
+
+  <footer>
+
+    <p>made with &#10084;&#65039; Semdeanon &copy;2022</p>
+  </footer>
 </body>
 </html>
