--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" media="screen and (min-width: 1100px)" href="./css/widescreen.css"/>
 
 
-  <title>Home | Mawuena Foundation</title>
+  <title>Home | Lawfort Foundation</title>
 </head>
 
 <body>
@@ -91,11 +91,11 @@
       </p>
       <h3>Our Team</h3>
       <ul class="list">
-        <li>Paschaline Deladem: CEO</li>
-        <li>Alex Asor: Director</li>
-        <li>Perfect Semenyo: Project Manager</li>
-        <li>Semenyo Alai: Accountant</li>
-        <li>Spider Hussle: Secretary</li>
+        <li>PERFECT SEMENYO ALAI: CEO</li>
+        <li>EDINAM ALAI: Director</li>
+        <li>NOBLE KWASI ALAI: Project Manager</li>
+        <li>WISDOM KOMLA ALAI: Accountant</li>
+        <li>SPIDER HUSSLE: Secretary</li>
 
       </ul>
     </div>
