--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav id="navbar">
     <h1 class="logo">
-      <span class="text-primary"> <i class="fa-solid fa-hand-holding-medical"></i> Mawuena</span>Foundation
+      <span class="text-primary"> <i class="fa-solid fa-hand-holding-medical"></i>Lawfort </span>Foundation
     </h1>
     <ul>
       <li><a href="#home">home</a></li>
